# lsp-python-types

./: .gitignore  CLAUDE.md  INTEGRATION_NOTES.md  Makefile  README.md  generate.py  pyproject.toml
.github/workflows/: main.yml  playground.yml  publish.yml  python-package.yml  python-tests.yml
assets/lsps/: pyrefly-guide.md
assets/scripts/: download_schemas.py  generate.py  lsp_schema.py  postprocess_schema.py
assets/scripts/utils/: generate_enumerations.py  generate_methods.py  generate_notifications.py  generate_requests.py  generate_structures.py  helpers.py  (+1 more)
docs/: FEATURE_VERIFICATION.md  INTEGRATION_NOTES.md  SEMANTIC_TOKENS.md
examples/: extract_semantic_legends.py  pyrefly_circular_imports.py  pyrefly_diagnostics_completion.py
lsp_types/: __init__.py  methods.py  process.py  requests.py  semantic_tokens.py  session.py  types.py
lsp_types/pyrefly/: KNOWN_LIMITATIONS.md  backend.py  config_schema.py  session.py
lsp_types/pyright/: backend.py  config_schema.py  session.py
lsp_types/ty/: KNOWN_LIMITATIONS.md  backend.py
lsp_types/zuban/: KNOWN_LIMITATIONS.md  __init__.py  backend.py  config_schema.py
playground/: fetch-wasm.sh  index.html  package-lock.json  package.json  vite.config.ts
playground/src/: editor.ts  main.ts  style.css  typeConversions.ts  ui.ts
tests/: mock_lsp_server.py  test_backend_contract.py  test_error_handling.py  test_methods.py  test_pool.py  test_server.py  test_session.py  test_zuban_config.py
tests/test_pyrefly/: test_pyrefly_session.py  test_session_pool.py
tests/test_pyright/: test_pyright_session.py
(+4 files in other folders)
