[tool.poetry]
name = "lsp-types"
version = "0.2.0"
description = "Zero-dependency Python library for Language Server Protocol types"
authors = ["Mazyad Alabduljaleel <mazjaleel@gmail.com>"]
include = ["lsp_types"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
